--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ div {
   font-size: 5rem;
   font-family: 'Graduate', cursive;
   color: white;
+  margin-top: 1.5rem;
 }
 
 #question-answer-container{
@@ -58,7 +59,7 @@ div {
   width: 100%;
   height: 20px;
   top: 30%;
-  margin-top: -25%;
+  margin-top: -20%;
   padding: -15%;
   text-align: center;
 }
