--- a/style.css
+++ b/style.css
@@ -43,13 +43,15 @@ div {
 
 /*Gameplay view*/
 
+
 #timer-display {
   /* font-size: 180px; */
   font-size: 5rem;
   font-family: 'Graduate', cursive;
   color: white;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+  margin-top: 1.75rem;
+  margin-bottom: 0.5rem;
+
 }
 
 #question-answer-container{
@@ -59,9 +61,9 @@ div {
   position: absolute;
   width: 100%;
   /* height: 20px; */
-  top: 30%;
-  margin-top: -20%;
-  padding: -15%;
+  top: 15%;
+  margin-top: -1.5rem;
+  /* padding: -15%; */
   text-align: center;
 }
 
